--- a/.github/workflows/marketplace.yml
+++ b/.github/workflows/marketplace.yml
@@ -9,6 +9,6 @@ jobs:
     
     steps:
     - name: check out the code
-      users: actions/checkout@2
+      uses: actions/checkout@v2
     - name: Python Syntax Checker
       uses: cclauss/Find-Python-syntax-errors-action@v0.2.0
